# toycalc

./: .gitignore  pyproject.toml  shell.nix
.github/workflows/: ci.yml
src/toycalc/: cli.py  core.py
tests/: test_cli.py  test_core.py
